# usb_midi_descriptor_lib

./: .gitignore  CMakeLists.txt  README.md  usb_midi_descriptor_lib.c  usb_midi_descriptor_lib.h
examples/C-Code/usb_midi_host_example/: CMakeLists.txt  tusb_config.h  usb_midi_host_example.c  utf16_to_utf8.h
examples/C-Code/usb_midi_host_pio_example/: CMakeLists.txt  tusb_config.h  usb_midi_host_pio_example.c
